app/src/main/java/com/example/mobileskillupsession/lsp/duck/good/RealDuck.kt
package com.example.mobileskillupsession.lsp.duck.good

class RealDuck: Duck {

    override fun duckDuck() {
        println("Duck can Duck Duck")
    }

    override fun swim() {
        println("Duck can swim")
    }
}