app/src/main/java/com/example/mobileskillupsession/lsp/duck/bad/Duck.kt
package com.example.mobileskillupsession.lsp.bad

open class Duck {

    open fun duckDuck() {
        println("Duck can Duck Duck")
    }

    open fun swim() {
        println("Duck can swim")
    }
}